[package]
name = "eztotp"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later OR MPL-2.0"
repository = "https://github.com/raohwork/eztotp"
description = "An easy-to-use TOTP solution."
keywords = ["totp", "2fa", "two-factor"]
categories = ["authentication"]
readme = "README.md"
exclude = [".rmi-work"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-authenticator = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
